fix(dakrmode): fix to disable dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,13 +17,6 @@
   --font-garamond: var(--font-eb-garamond);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #470B0B;
-    --foreground: #F6F2EA;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
